# AQmlTreePlugin

./: .gitignore  CMakeLists.txt  Empty.qml  ItemView.qml  LICENSE  ListItem.qml  ModelItem.qml  README.md  TreeItem.qml  TreeItemsList.qml  TreeView.qml  main.cpp  main.qml  qml.qrc  qmldir  rootcontroller.cpp  rootcontroller.h  tree_item.cpp  tree_item.h  tree_model.cpp  tree_model.h  treemodel.h
.github/workflow/: master_build.yml
.github/workflows/: build_plugin.yml
example/: example.cpp  example.qml  rootcontroller.h
sources/: treeitem.cpp  treeitem.h  treemodel.cpp
sources/qml/: ListItem.qml  TreeItem.qml
tests/: tst_treemodeltest.cpp
